# minecraft-in-C-

./: CMakeLists.txt  README.md  a.out
include/: Camera.h  Renderer.h  Shader.h
src/: main.cpp
src/Camera/: Camera.cpp
src/Renderer/: Renderer.cpp  Renderer.h
src/Shader/: Shader.cpp  Shader.h  fragment.shader  vertex.shader
